--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-aiogram==2.19
+aiogram==2.24
 aiohttp==3.8.1
 aiosignal==1.2.0
 async-timeout==4.0.2
@@ -8,6 +8,7 @@ certifi==2021.10.8
 charset-normalizer==2.0.11
 frozenlist==1.3.0
 idna==3.3
+magic-filter==1.0.9
 multidict==6.0.2
 pytz==2021.3
 requests==2.27.1
